syntax = "proto3";

//#options
option java_multiple_files = true;
option java_package = "services.scalable.index.grpc";
option java_outer_classname = "ClientServiceProto";

import "google/protobuf/wrappers.proto";

package services.scalable.index;

message Tuple {
  bytes key = 1;
  bytes value = 2;
}

message LeafBlock {
  string id = 1;
  string partition = 2;
  repeated Tuple tuples = 3;
  int32 min = 4;
  int32 max = 5;

  oneof optional_root {
    string root = 6;
  }
}

message Pointer {
  bytes key = 1;
  string link = 2;
}

message MetaBlock {
  string id = 1;
  string partition = 2;
  repeated Pointer pointers = 3;
  int32 min = 4;
  int32 max = 5;

  oneof optional_root {
    string root = 6;
  }
}

message Datom {
  google.protobuf.StringValue e = 1;
  google.protobuf.StringValue a = 2;
  google.protobuf.BytesValue v = 3;
  google.protobuf.Int64Value t = 4;
}